--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     alias(libs.plugins.androidApplication)
     alias(libs.plugins.jetbrainsKotlinAndroid)
 
-    id 'kotlin-kapt'
+    id "kotlin-kapt"
+    id "dagger.hilt.android.plugin"
 }
 
 android {
