--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,9 @@ dependencies {
     //Accompanist Loading
     implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
 
+    //Mapbox
+    implementation 'com.mapbox.maps:android:11.3.1'
+    implementation("com.mapbox.extension:maps-compose:11.3.1")
 }
 
 kapt {
